# lead-generation-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.yaml  build.sh  docker-compose.yml  index.html  lead-gen-key.pem  package-lock.json  package.json  pyproject.toml  requirements.txt  runtime.txt
.github/workflows/: deploy.yml  jekyll-gh-pages.yml
app/: main.py
app/api/: deps.py
app/api/api_v1/: api.py
app/core/: config.py
app/crud/: __init__.py  base.py  crud_email_template.py  crud_lead.py
app/db/: base.py  base_class.py  session.py
app/models/: __init__.py  email_template.py  lead.py  user.py
app/schemas/: __init__.py  base.py  email_template.py  lead.py  user.py
app/services/: __init__.py  lead_generation.py  lead_scoring.py  web_scraper.py
app/static/: 404.html  index.html
backend/: .env  Dockerfile  app.py  lead_scoring.py  main.py  requirements.txt  test_server.py  test_web_scraper.py  web_scraper.py
backend/.ebextensions/: 01_fastapi.config
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: models.py
backend/app/services/: ai_service.py  airbnb_scraper.py  linkedin_scraper.py  web_scraper.py
backend/app/utils/: rate_limiter.py
docs/: 404.html  index.html  results.html  select-format.html
frontend/: .env  .env.production  .gitignore  Dockerfile  README.md  bucket-policy.json  package-lock.json  package.json  setup.sh
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.tsx  theme.ts
frontend/src/components/: DataSourceConfig.tsx  DataSourceSelector.tsx  FadeInSection.tsx  FeatureIcon.tsx  Layout.tsx  LeadGeneration.tsx  LoadingSpinner.tsx  Navbar.tsx  RoleSourceConfig.tsx  TrustedCompanies.tsx  WebScraper.tsx
frontend/src/contexts/: DataSourceContext.tsx
frontend/src/pages/: Dashboard.tsx  LandingPage.tsx  LeadGeneration.tsx  LeadManagement.tsx  LoadingPage.tsx  Login.tsx  ResultsPage.tsx  Settings.tsx
lead_generation_app/: requirements.txt
tests/: test_web_scraper.py
(+8 files in other folders)
