[tool.poetry]
name = "lead-generation-api"
version = "1.0.0"
description = "AI-powered lead generation system for property managers"
authors = ["sarp doven <sarptandoven@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
sqlalchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
pydantic = "^1.9.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
requests = "^2.26.0"
beautifulsoup4 = "^4.9.3"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
python-dotenv = "^0.19.0"
linkedin-api = "^2.0.3"
openai = "^1.12.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 